k - fixed styleguide header spacing and z-index. also fixed index images when in mobile size

--- a/pub_html/css/main.css
+++ b/pub_html/css/main.css
@@ -414,6 +414,10 @@ footer{
 }
 
 @media (max-width:700px) {
+  .work-img-block{
+    width: auto;
+    margin: 2rem auto;
+  }
   .header-home-nav{
     left: 20px;
   }
